﻿[B]v3.0.0 (08 de Março de 2016):[/B]
- Refactor para CopiaDB
- Correcção das colecções mais recentes
- Adicionado DiskoKosmiko (México)
- Adicionado KumpulBagi (Indonésia)

[B]v2.0.3 (28 de Dezembro de 2016):[/B]
- Login passa a ser obrigatorio no site.

[B]v2.0.2 (22 de Abril de 2016):[/B]
- Novo logo (tks sheikr)
- Pastas adicionadas.
- Legendas disponiveis caso tenham o mesmo nome que o filme (reportar caso nao esteja a funcionar).
- Outras correccoes de codigo.

[B]v2.0.1 (7 de Marco de 2016):[/B]
- Adicionado aviso.
- Coleccoes mais recentes.

[B]v2.0.0 (6 de Marco de 2016):[/B]
Dado o fecho de varios sites do grupo do abelhas, o addon vai alterar-se para outro site do grupo.
O copiapop e um site de alojamento publico estilo abelhas. O addon esta a ser re-escrito do zero e para ja apenas devem constar as funcionalidades basicas.

[B]v1.1.4 (25 de Dezembro de 2015):[/B]
- Pequenos fixes.

[B]v1.1.3 (23 de Dezembro de 2015):[/B] (ty enen92)
- Fix download.
- Novo gestor de download.

[B]v1.1.2 (13 de Dezembro de 2015):[/B] (ty mafarricos)
- Cookies fix
- fix quantity of context menu

[B]v1.1.0-beta010 (20 de Junho de 2015):[/B]
- add videoclips to library

[B]v1.1.0-beta006 (18 de Junho de 2015):[/B]
- mark as watched from library list: ty gb160
- fix favorite next page

[B]v1.1.0-beta005 (18 de Junho de 2015):[/B]
abelhas improvement: better usage of portuguese chars

[B]v1.1.0-beta003 (15 de Junho de 2015):[/B]
- Opção de resumir.

[B]v1.1.0-beta002 (15 de Junho de 2015):[/B]
- Pesquisa apresenta resultados únicos na combinação de nome+tamanho.

[B]v1.1.0-beta001 (14 de Junho de 2015):[/B]
- Melhoria quando addon chamado de fora:
- Se opção Pasta no addon abre logo o video (com melhor qualidade dependendo das opções);
- Se opção Dialogo dá opção de escolher a qualidade.

[B]v1.1.0 (14 de Junho de 2015):[/B]
Actualizacao por Mafarricos!
- Thumbnails do abelhas para filmes e fotos;
- Código refeito;
- Toutbox, lolabits e minhateca adicionados;