@@ -1,4 +1,7 @@
-﻿[B]v3.0.0 (08 de Março de 2016):[/B]
+﻿[B]v3.0.1 (14 de Março de 2016):[/B]
+- Permite ocultar legendas e imagens
+
+[B]v3.0.0 (08 de Março de 2016):[/B]
 - Refactor para CopiaDB
 - Correcção das colecções mais recentes
 - Adicionado DiskoKosmiko (México)
